--- a/dev/03-apple-books/00-apple-books.html
+++ b/dev/03-apple-books/00-apple-books.html
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../00-intro/00-intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../01-usage/00-usage.html"><strong aria-hidden="true">1.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-usage/01-export.html"><strong aria-hidden="true">1.1.</strong> Export</a></li><li class="chapter-item expanded "><a href="../01-usage/02-render.html"><strong aria-hidden="true">1.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../01-usage/03-backup.html"><strong aria-hidden="true">1.3.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../01-usage/04-options.html"><strong aria-hidden="true">1.4.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../02-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../02-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../02-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../02-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../02-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../02-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../02-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../02-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../03-apple-books/00-intro.html" class="active"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../03-apple-books/01-backup-library.html"><strong aria-hidden="true">3.1.</strong> Backup Apple Books' Library</a></li><li class="chapter-item expanded "><a href="../03-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Apple Books' Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../00-intro/00-intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../01-usage/00-usage.html"><strong aria-hidden="true">1.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-usage/01-export.html"><strong aria-hidden="true">1.1.</strong> Export</a></li><li class="chapter-item expanded "><a href="../01-usage/02-render.html"><strong aria-hidden="true">1.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../01-usage/03-backup.html"><strong aria-hidden="true">1.3.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../01-usage/04-options.html"><strong aria-hidden="true">1.4.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../02-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../02-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../02-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../02-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../02-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../02-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../02-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../02-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../03-apple-books/00-apple-books.html" class="active"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../03-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../03-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -114,7 +114,7 @@
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/03-apple-books/00-intro.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/03-apple-books/00-apple-books.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
                     </div>
@@ -143,26 +143,75 @@
                     <main>
                         <h1 id="apple-books"><a class="header" href="#apple-books">Apple Books</a></h1>
 <blockquote>
-<p><i class="fa fa-exclamation-circle"></i> This guide assumes that Apple Books
-syncing in iCloud Drive is disabled!</p>
+<p><i class="fa fa-exclamation-circle"></i> The following information assumes
+that Apple Books syncing with iCloud Drive is disabled!</p>
 </blockquote>
+<blockquote>
+<p><i class="fa fa-info-circle"></i> Complete archive and restore scripts are
+available in <a href="https://github.com/tnahs/readstor/tree/main/scripts/apple-books/">scripts/apple-books</a>.</p>
+</blockquote>
+<h2 id="what-to-archiverestore"><a class="header" href="#what-to-archiverestore">What To Archive/Restore?</a></h2>
+<p>Apple Books stores the bulk of its data in two locations:</p>
+<ol>
+<li>
+<p>The location of EPUBs, PDFs, Audiobooks, etc.:</p>
+<pre><code class="language-plaintext">~/Library/Containers/com.apple.BKAgentService
+</code></pre>
+</li>
+<li>
+<p>The location of the library's databases:</p>
+<pre><code class="language-plaintext">~/Library/Containers/com.apple.iBooksX
+</code></pre>
+</li>
+</ol>
+<p>However, only archiving and restoring these directories might miss some
+metadata. Searching <code>~/Library/Containers</code> for anything that contains <code>Books</code>
+yields some other directories:</p>
+<pre><code class="language-console">$ find ~/Library/Containers -type d -name &quot;*Books*&quot;
+
+./com.apple.BKAgentService/Data/Documents/iBooks
+./com.apple.BKAgentService/Data/Documents/iBooks/Books
+./com.apple.iBooksX
+./com.apple.iBooksX/Data/Documents/BCCloudKit-iBooks
+./com.apple.iBooksX/Data/Documents/BCCloudAsset-iBooks
+./com.apple.iBooksX/Data/Documents/BKBookstore
+./com.apple.iBooksX/Data/Library/Caches/com.apple.iBooksX
+./com.apple.iBooksX.CacheDelete
+./com.apple.iBooksX.DiskSpaceEfficiency
+./com.apple.iBooksX.SharingExtension
+./com.apple.iBooksX-SecureUserDefaults
+</code></pre>
+<p>Using <code>BK</code> as a proxy for <code>Books</code> yields no additional directores:</p>
+<pre><code class="language-console">$ find ~/Library/Containers -type d -name &quot;*BK*&quot;
+
+./com.apple.BKAgentService
+./com.apple.iBooksX/Data/Documents/BKSeriesDatabase
+./com.apple.iBooksX/Data/Documents/BKLibraryDataSourceDevelopment
+./com.apple.iBooksX/Data/Documents/BKLibrary
+./com.apple.iBooksX/Data/Documents/BKBookstore
+</code></pre>
+<p>So it's safe to assume any directory starting with <code>com.apple.Books</code> or
+<code>com.apple.BK</code> is important. Therefore these two globs along with Apple Books'
+<code>Group Container</code> should be used for archiving and restoring:</p>
+<pre><code class="language-plaintext">~/Library/Containers/com.apple.BK*
+~/Library/Containers/com.apple.iBooks*
+~/Library/Group\ Containers/group.com.apple.iBooks
+</code></pre>
 <h2 id="important-note"><a class="header" href="#important-note"><i class="fa fa-exclamation-circle"></i> Important Note</a></h2>
-<p>This method will work <strong>only</strong> if the path to the user's home folder <em>has not
-changed</em> from when the library was backed up to when its restored.</p>
-<p>Doing a few quick searches through the Apple Books directories shows that the
-path to the user's home folder has been hard-coded. This is most evident in the
-<code>BKLibrary-***.sqlite</code> file which contains absolute paths to files.</p>
-<p>If the username <em>must</em> be changed, a search and replace can be attempted.
-Whether this will work or not is unconfirmed.</p>
-<pre><code class="language-console">$ find ~/Library/Containers/com.apple.BKAgentService -type f \
-    -a -exec grep -l --exclude=\*.{htm,html,xhtml} $USER {} +
+<p>Archving/restoring will work <strong>only</strong> if the path to the username <strong>has not
+changed</strong> since the library was archived. Doing a few searches shows that the
+the username has been hard-coded into some files. This is most evident in the
+<code>BKLibrary-***.sqlite</code> file which contains absolute paths to library files.</p>
+<p>For example:</p>
+<pre><code class="language-console">$ find ~/Library/Containers/com.apple.BKAgentService \
+    -type f -a -exec grep -l --exclude=\*.{htm,html,xhtml} $USER {} +
 
 .../.com.apple.containermanagerd.metadata.plist
 .../Container.plist
 .../Data/Documents/iBooks/Books/Books.plist
 </code></pre>
-<pre><code class="language-console">$ find ~/Library/Containers/com.apple.iBooksX* -type f \
-    -a -exec grep -l --exclude=\*.{htm,html,xhtml} $USER {} +
+<pre><code class="language-console">$ find ~/Library/Containers/com.apple.iBooksX* \
+    -type f -a -exec grep -l --exclude=\*.{htm,html,xhtml} $USER {} +
 
 .../com.apple.iBooksX/.com.apple.containermanagerd.metadata.plist
 .../com.apple.iBooksX/Container.plist
@@ -185,7 +234,7 @@ Whether this will work or not is unconfirmed.</p>
                             <a rel="prev" href="../02-templates/06-03-links.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../03-apple-books/01-backup-library.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../03-apple-books/01-archive-library.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -197,7 +246,7 @@ Whether this will work or not is unconfirmed.</p>
                     <a rel="prev" href="../02-templates/06-03-links.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../03-apple-books/01-backup-library.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../03-apple-books/01-archive-library.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
