--- a/dev/03-apple-books/01-archive-library.html
+++ b/dev/03-apple-books/01-archive-library.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Backup Apple Books&#x27; Library - ReadStor</title>
+        <title>Archive Library - ReadStor</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../00-intro/00-intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../01-usage/00-usage.html"><strong aria-hidden="true">1.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-usage/01-export.html"><strong aria-hidden="true">1.1.</strong> Export</a></li><li class="chapter-item expanded "><a href="../01-usage/02-render.html"><strong aria-hidden="true">1.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../01-usage/03-backup.html"><strong aria-hidden="true">1.3.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../01-usage/04-options.html"><strong aria-hidden="true">1.4.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../02-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../02-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../02-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../02-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../02-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../02-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../02-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../02-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../03-apple-books/00-intro.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../03-apple-books/01-backup-library.html" class="active"><strong aria-hidden="true">3.1.</strong> Backup Apple Books' Library</a></li><li class="chapter-item expanded "><a href="../03-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Apple Books' Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../00-intro/00-intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../01-usage/00-usage.html"><strong aria-hidden="true">1.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-usage/01-export.html"><strong aria-hidden="true">1.1.</strong> Export</a></li><li class="chapter-item expanded "><a href="../01-usage/02-render.html"><strong aria-hidden="true">1.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../01-usage/03-backup.html"><strong aria-hidden="true">1.3.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../01-usage/04-options.html"><strong aria-hidden="true">1.4.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../02-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../02-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../02-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../02-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../02-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../02-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../02-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../02-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../03-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../03-apple-books/01-archive-library.html" class="active"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../03-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -114,7 +114,7 @@
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/03-apple-books/01-backup-library.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/03-apple-books/01-archive-library.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
                     </div>
@@ -141,67 +141,67 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="backup-apple-books-library"><a class="header" href="#backup-apple-books-library">Backup Apple Books' Library</a></h1>
-<h2 id="what-to-archive"><a class="header" href="#what-to-archive">What to Archive</a></h2>
-<p>Apple Books stores the bulk of its data in two locations:</p>
-<ol>
-<li>
-<p>The location of EPUBs, PDFs, Audiobooks, etc.:</p>
-<pre><code class="language-plaintext">~/Library/Containers/com.apple.BKAgentService
-</code></pre>
-</li>
-<li>
-<p>The location of the library's databases: <code>BKLibrary***.sqlite</code> and <code>AEAnnotation***.sqlite</code>:</p>
-<pre><code class="language-plaintext">~/Library/Containers/com.apple.iBooksX
-</code></pre>
-</li>
-</ol>
-<p>However, only archiving and restoring these directories might miss some of the metadata.</p>
-<pre><code class="language-console">$ find ~/Library/Containers -type d -name &quot;*Books*&quot;
-
-./com.apple.BKAgentService/Data/Documents/iBooks
-./com.apple.BKAgentService/Data/Documents/iBooks/Books
-./com.apple.iBooksX
-./com.apple.iBooksX/Data/Documents/BCCloudKit-iBooks
-./com.apple.iBooksX/Data/Documents/BCCloudAsset-iBooks
-./com.apple.iBooksX/Data/Documents/BKBookstore
-./com.apple.iBooksX/Data/Library/Caches/com.apple.iBooksX
-./com.apple.iBooksX.CacheDelete
-./com.apple.iBooksX.DiskSpaceEfficiency
-./com.apple.iBooksX.SharingExtension
-./com.apple.iBooksX-SecureUserDefaults
-</code></pre>
-<p>And using <code>BK</code> as a proxy for <code>Books</code>:</p>
-<pre><code class="language-console">$ find ~/Library/Containers -type d -name &quot;*BK*&quot;
-
-./com.apple.BKAgentService
-./com.apple.iBooksX/Data/Documents/BKSeriesDatabase
-./com.apple.iBooksX/Data/Documents/BKLibraryDataSourceDevelopment
-./com.apple.iBooksX/Data/Documents/BKLibrary
-./com.apple.iBooksX/Data/Documents/BKBookstore
-</code></pre>
-<p>So it's good to assume any directory with the string <code>Books</code> or <code>BK</code> is
-important. Therefore these two globs will be archived:</p>
-<pre><code class="language-plaintext">~/Library/Containers/com.apple.BK*
-~/Library/Containers/com.apple.iBooks*
-</code></pre>
-<h2 id="archiving-the-library"><a class="header" href="#archiving-the-library">Archiving The Library</a></h2>
-<p>Run the following <code>rsync</code> command:</p>
-<pre><code class="language-console">rsync \
-    --verbose \
-    --progress \
+                        <h1 id="archive-library"><a class="header" href="#archive-library">Archive Library</a></h1>
+<blockquote>
+<p><i class="fa fa-info-circle"></i> The following snippet is taken from
+<a href="https://github.com/tnahs/readstor/tree/main/scripts/apple-books/archive.sh">scripts/apple-books/archive.sh</a>.</p>
+</blockquote>
+<p>Archiving the library is as simple as running two <code>rsync</code> commands. This should
+save all the relevant Apple Books data and metadata to a single directory. Make
+sure to replace <code>[PATH-TO-ARCHIVE]</code> with a valid path to said directory.</p>
+<pre><code class="language-sh">rsync \
     --archive \
     --extended-attributes \
     $HOME/Library/Containers/com.apple.BK* \
     $HOME/Library/Containers/com.apple.iBooks* \
-    [PATH_TO_ARCHIVE]
+    [PATH-TO-ARCHIVE]/Containers
+
+rsync \
+    --archive \
+    --extended-attributes \
+    $HOME/Library/Group\ Containers/group.com.apple.iBooks \
+    [PATH-TO-ARCHIVE]/Group\ Containers
+</code></pre>
+<p>For example, if <code>[PATH-TO-ARCHIVE]</code> is:</p>
+<pre><code class="language-plaintext">~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6
+</code></pre>
+<p>Our <code>rsync</code> commands would be:</p>
+<pre><code class="language-sh">rsync \
+    --archive \
+    --extended-attributes \
+    $HOME/Library/Containers/com.apple.BK* \
+    $HOME/Library/Containers/com.apple.iBooks* \
+    ~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6/Containers
+
+rsync \
+    --archive \
+    --extended-attributes \
+    $HOME/Library/Group\ Containers/group.com.apple.iBooks \
+    ~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6/Group\ Containers
+</code></pre>
+<p>And the resulting archive would resemble:</p>
+<pre><code class="language-plaintext">~/archives
+  └── 2022-10-08--apple-books-v4.4-5177--macos-v12.6
+      ├── Containers
+      │   ├── com.apple.BKAgentService
+      │   ├── com.apple.iBooks.BooksNotificationContentExtension
+      │   ├── com.apple.iBooks.engagementExtension
+      │   ├── com.apple.iBooks.iBooksSpotlightExtension
+      │   ├── com.apple.iBooksX
+      │   ├── com.apple.iBooksX-SecureUserDefaults
+      │   ├── com.apple.iBooksX.BooksThumbnail
+      │   ├── com.apple.iBooksX.CacheDelete
+      │   ├── com.apple.iBooksX.DiskSpaceEfficiency
+      │   └── com.apple.iBooksX.SharingExtension
+      └── Group Containers
+          └── group.com.apple.iBooks
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../03-apple-books/00-intro.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../03-apple-books/00-apple-books.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
                             <a rel="next" href="../03-apple-books/02-restore-library.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
@@ -213,7 +213,7 @@ important. Therefore these two globs will be archived:</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../03-apple-books/00-intro.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../03-apple-books/00-apple-books.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
                     <a rel="next" href="../03-apple-books/02-restore-library.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
