--- a/dev/03-apple-books/02-restore-library.html
+++ b/dev/03-apple-books/02-restore-library.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Restore Apple Books&#x27; Library - ReadStor</title>
+        <title>Restore Library - ReadStor</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../00-intro/00-intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../01-usage/00-usage.html"><strong aria-hidden="true">1.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-usage/01-export.html"><strong aria-hidden="true">1.1.</strong> Export</a></li><li class="chapter-item expanded "><a href="../01-usage/02-render.html"><strong aria-hidden="true">1.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../01-usage/03-backup.html"><strong aria-hidden="true">1.3.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../01-usage/04-options.html"><strong aria-hidden="true">1.4.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../02-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../02-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../02-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../02-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../02-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../02-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../02-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../02-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../03-apple-books/00-intro.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../03-apple-books/01-backup-library.html"><strong aria-hidden="true">3.1.</strong> Backup Apple Books' Library</a></li><li class="chapter-item expanded "><a href="../03-apple-books/02-restore-library.html" class="active"><strong aria-hidden="true">3.2.</strong> Restore Apple Books' Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../00-intro/00-intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../01-usage/00-usage.html"><strong aria-hidden="true">1.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-usage/01-export.html"><strong aria-hidden="true">1.1.</strong> Export</a></li><li class="chapter-item expanded "><a href="../01-usage/02-render.html"><strong aria-hidden="true">1.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../01-usage/03-backup.html"><strong aria-hidden="true">1.3.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../01-usage/04-options.html"><strong aria-hidden="true">1.4.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../02-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../02-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../02-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../02-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../02-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../02-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../02-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../02-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../03-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../03-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../03-apple-books/02-restore-library.html" class="active"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -141,34 +141,61 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="restore-apple-books-library"><a class="header" href="#restore-apple-books-library">Restore Apple Books' Library</a></h1>
-<p>Make sure Apple Books is closed or run:</p>
-<pre><code class="language-console">osascript -e 'tell application &quot;Books&quot; to quit'
-</code></pre>
-<p>Delete the current library using the same globs.</p>
-<!-- TODO: Add note about `Group Containers` -->
-<pre><code class="language-console">rm -rf $HOME/Library/Containers/com.apple.BK*
+                        <h1 id="restore-library"><a class="header" href="#restore-library">Restore Library</a></h1>
+<blockquote>
+<p><i class="fa fa-info-circle"></i> The following snippets are taken from
+<a href="https://github.com/tnahs/readstor/tree/main/scripts/apple-books/restore.sh">scripts/apple-books/restore.sh</a>.</p>
+</blockquote>
+<p>Restoring the library takes an extra step. First we need to clear out
+the current Apple Books library. We can delete all the library files and
+directories by using the paths we determined from
+<a href="./00-apple-books.html#what-to-archiverestore">What To Archive/Restore?</a>.</p>
+<pre><code class="language-sh">rm -rf $HOME/Library/Containers/com.apple.BK*
 rm -rf $HOME/Library/Containers/com.apple.iBooks*
 rm -rf $HOME/Library/Group\ Containers/group.com.apple.iBooks
 </code></pre>
-<p>Extract the archive directly into <code>~/Library/Containers</code>.</p>
-<p>The trailing slash after <code>[PATH_TO_ARCHIVE]</code> here is important. It tells <code>rsync</code>
-to move the <em>contents</em> of this directory into another. Otherwise it would move
-the directory as a whole.</p>
-<pre><code class="language-console">rsync \
-    --verbose \
-    --progress \
+<p>Finally, we can run the reverse <code>rsync</code> commands and restore the archive we
+previously made. Make sure to replace <code>[PATH-TO-ARCHIVE]</code> with a valid path.</p>
+<pre><code class="language-sh">rsync \
     --archive \
-    [PATH_TO_ARCHIVE]/ \
+    --extended-attributes \
+    [PATH-TO-ARCHIVE]/Containers/ \
     $HOME/Library/Containers/
+
+rsync \
+    --archive \
+    --extended-attributes \
+    [PATH-TO-ARCHIVE]/Group\ Containers/ \
+    $HOME/Library/Group\ Containers/
 </code></pre>
-<p>That's it! At this point the library should be fully restored.</p>
+<blockquote>
+<p><i class="fa fa-exclamation-circle"></i> The trailing forward-slash after
+<code>Containers</code> and <code>Group\ Containers</code> here is important. It tells <code>rsync</code> to
+move the the archive directory's <em>contents</em> into the target. Otherwise it
+would move the archive <em>directory</em> into the target.</p>
+</blockquote>
+<p>For example, if <code>[PATH-TO-ARCHIVE]</code> is:</p>
+<pre><code class="language-plaintext">~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6
+</code></pre>
+<p>Our <code>rsync</code> command would be:</p>
+<pre><code class="language-sh">rsync \
+    --archive \
+    --extended-attributes \
+    ~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6/Containers/ \
+    $HOME/Library/Containers/  # Note the forward-slash! ---------------^
+
+rsync \
+    --archive \
+    --extended-attributes \
+    ~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6/Group\ Containers/ \
+    $HOME/Library/Group\ Containers/  # Note the forward-slash! ---------------^
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../03-apple-books/01-backup-library.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../03-apple-books/01-archive-library.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -177,7 +204,7 @@ the directory as a whole.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../03-apple-books/01-backup-library.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../03-apple-books/01-archive-library.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
             </nav>
